...

    <string name="theme">Theme</string>
    <string name="could_not_switch_theme">Could not switch theme</string>
    <string name="could_not_load_units">Could not load units</string>
    <string name="could_not_set_units">Could not set unit</string>

    <string name="set_location">Set desired location</string>
    <string name="could_not_set_location">Could not set location. Check your input and internet connection</string>
    <string name="set_location_sheet">Set</string>
    <string name="set_current_location_as_default">Set current location as the default</string>
    <string name="location_set_successfully">Successfully set location to %1$s</string>
    <string name="next_location_set_time">Next location set available at %1$s</string>

    <string name="temp_unit">Temperature unit</string>
    <string name="visibility_unit">Visibility unit</string>
    <string name="wind_speed_unit">Wind speed unit</string>
    <string name="manage_subscriptions_link">https://play.google.com/store/account/subscriptions</string>
    <string name="manage_subscriptions">Manage subscriptions</string>
...
